--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
           <span class="sr-only">nimbus</span>
         </h1>
 
-       <p class="tag">High-altitude security for your applications</p>
+       <!-- <p class="tag">Secure accounts, instant access, built for you.</p> -->
       </header>
 
       <div class="card-body">
